# hello-gl

./: .gitmodules  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
lib/: CMakeLists.txt
src/: CMakeLists.txt  Main.cpp  Shader.cpp  Shader.hpp  frag.glsl  vert.glsl
src/shaders/: frag.glsl  vert.glsl
